remove username
