# django-next-openapi/django/access/serializers.py
@@ -1,7 +1,7 @@
 # access/serializers.py
+from django.contrib.auth import get_user_model
 from django.contrib.auth.models import Group
 from rest_framework import serializers
-from django.contrib.auth import get_user_model
 
 User = get_user_model()
 
@@ -11,29 +11,26 @@ class GroupSerializer(serializers.ModelSerializer):
         fields = ('id', 'name')
 
 class LoginSerializer(serializers.Serializer):
-    username = serializers.CharField(required=True, help_text="The user's username.")
-    password = serializers.CharField(required=True, write_only=True, help_text="The user's password.")
+    email = serializers.EmailField(required=True, help_text="User email")
+    password = serializers.CharField(required=True, write_only=True, help_text="Password")
 
 class RegisterSerializer(serializers.ModelSerializer):
     password = serializers.CharField(write_only=True, required=True)
 
     class Meta:
         model = User
-        fields = ('username', 'email', 'password', 'name')
+        fields = ('email', 'password', 'name')
 
     def create(self, validated_data):
-        username = validated_data.get('username')
         email = validated_data.get('email')
         password = validated_data.get('password')
-        name = validated_data.get('name', '')
-        user = User.objects.create_user(username=username, email=email, password=password, name=name)
+        name = validated_data.get('name', "")
+        user = User.objects.create_user(email=email, password=password, name=name)
+        # Optionally mark email verified or send verification email
         return user
 
 class LogoutSerializer(serializers.Serializer):
-    refresh_token = serializers.CharField(
-        required=True,
-        help_text="The refresh token to be blacklisted upon logout."
-    )
+    refresh_token = serializers.CharField(required=True)
 
 class TokenRefreshSerializer(serializers.Serializer):
     pass
@@ -43,5 +40,5 @@ class CurrentUserSerializer(serializers.ModelSerializer):
 
     class Meta:
         model = User
-        fields = ('id', 'username', 'email', 'name', 'birthday', 'avatar', 'phone', 'groups', 'is_email_verified')
+        fields = ('id', 'email', 'name', 'birthday', 'avatar', 'phone', 'groups', 'is_email_verified')
         read_only_fields = fields
